updated html documentation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Spice Girls API</h1>
-    <p>Please use localhost:8000/api/spice-girl-name</p>
+    <p>Please use https://working-spice-girls-api.herokuapp.com/api/spice-girl-name</p>
     
 </body>
 </html>
